# Vibekstra

./: .gitignore  LICENSE  README.md  pyproject.toml  requeriments.txt
src/vibekstra/: __init__.py  ai.py
tests/: test_vibekstra.py
